--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,8 @@
   color: rgba(255, 255, 255, 0.87);
   background-color: rgba(16, 16, 16, 1);
 
+  overflow: hidden;
+
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
