--- a/src/index.css
+++ b/src/index.css
@@ -12,8 +12,6 @@
   color: rgba(255, 255, 255, 0.87);
   background-color: rgba(16, 16, 16, 1);
 
-  overflow: hidden;
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -139,4 +137,21 @@ h1 {
   max-width: 400px;
   backdrop-filter: none;
   position: relative;
+}
+
+.auth-btn {
+  width: 100%;
+  height: 40px;
+  padding: 10px;
+  border: none;
+  color: #fff;
+  font-size: 16px;
+  border-radius: 1px;
+  cursor: pointer;
+  transition: background-color 0.2s;
+  font-family: "Roboto";
+}
+
+.auth-btn:hover {
+  background-color: #0056b3;
 }
