--- a/src/index.css
+++ b/src/index.css
@@ -148,7 +148,7 @@ h1 {
   border: none;
   color: #fff;
   font-size: 16px;
-  border-radius: 1px;
+  border-radius: 5px;
   cursor: pointer;
   transition: background-color 0.2s;
   font-family: "Roboto";
@@ -233,7 +233,7 @@ h1 {
 }
 
 .auth-background {
-  background-image: url("src/assets/auth-bg.png");
+  background: primary;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
