--- a/src/index.css
+++ b/src/index.css
@@ -10,9 +10,10 @@
   line-height: 1.5;
   font-weight: 400;
 
+  overflow: visible;
+
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: rgba(16, 16, 16, 1);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
